win32-loader (0.6.5) UNRELEASED; urgency=low

  * echo 5 > debian/compat

 -- Robert Millan <rmh@aybabtu.com>  Fri, 14 Mar 2008 20:58:06 +0100

win32-loader (0.6.4) experimental; urgency=low

  * Rename "Debconf preseed line:" to "Linux cmdline".
  * Bring back support for Windows 98.

 -- Robert Millan <rmh@aybabtu.com>  Wed,  5 Mar 2008 19:56:57 +0100

win32-loader (0.6.3) unstable; urgency=low

  * Use RequestExecutionLevel to disable idiotic compatibility mode where
    Vista identifies itself as XP.

 -- Robert Millan <rmh@aybabtu.com>  Sun, 24 Feb 2008 21:24:40 +0100

win32-loader (0.6.2) unstable; urgency=low

  * s/XFCE/Xfce/g.  (Closes: #466333)
  * Fix bcdedit load in 64-bit Vista.  Thanks Amir Szekely for the hints.
    (Closes: #441379)

  [ Updated translations ]
  * Traditional Chinese (zh_TW.po) by Tetralet (Closes: #464972)

 -- Robert Millan <rmh@aybabtu.com>  Sun, 24 Feb 2008 11:29:54 +0100

win32-loader (0.6.1) unstable; urgency=low

  * Set the "seen" flag to false for preseed variables that weren't intended
    to be skipped.
  * control (Build-Depends): Avoid grub-pc (>= 1.96+20080203) & grubutil-win32
    (<< 1.1-18-2) deadly combination.

  [ Updated translations ]
  * Portuguese (Brazil) (pt_BR.po) by Felipe Augusto van de Wiel (faw)
  * Traditional Chinese (zh_TW.po) by Tetralet

 -- Robert Millan <rmh@aybabtu.com>  Sun, 17 Feb 2008 12:34:44 +0100

win32-loader (0.6.0) unstable; urgency=low

  * Add page to allow user into rescue mode.
  * Preseed quietness on non-expert installs.
  * Disable LicenseForceSelection.
  * Add dialog to choose desktop environment (GNOME, KDE, XFCE, None).
    (Closes: #442209)
  * Detect and preseed passwd/user-fullname (without setting the seen flag).
  * Do not preseed "interface=auto". Do not set the seen flag for
    "domain" and "time/zone".
  * Correct a pair of mistakes in English strings (thanks Jens Seidel).
  * Fix dialog.nsh generation for languages whose names have more than