@@ -1,8 +1,9 @@
 win32-loader (0.6.5) UNRELEASED; urgency=low
 
   * echo 5 > debian/compat
+  * Makefile: Fix stamp handling in iso target.
 
- -- Robert Millan <rmh@aybabtu.com>  Fri, 14 Mar 2008 20:58:06 +0100
+ -- Robert Millan <rmh@aybabtu.com>  Sat, 15 Mar 2008 12:25:36 +0100
 
 win32-loader (0.6.4) experimental; urgency=low
 
